# Climber

./: .gitignore  .gitmodules  CMakeLists.txt  Info.plist.in  README.md  README_CN.md  win32.rc.in
.github/workflows/: build-every-commit.yml  build-every-push.yml  build-release-macos.yml  build-release-windows.yml  build-release.yml
assets/: icon.icns  privoxy.conf  proxy.pac  user-rule.txt
localization/: zh_CN.po  zh_TW.po
src/: AboutFrame.cpp  AboutFrame.h  ClientManager.cpp  ClientManager.h  Climber.cpp  Climber.h  Configuration.cpp  Configuration.h  GeneralSettingsPage.cpp  GeneralSettingsPage.h  Paths.h  PreferencesFrame.cpp  PreferencesFrame.h  ProxySettingsPage.cpp  ProxySettingsPage.h  ServerConfFrame.cpp  ServerConfFrame.h  ServerConfItem.cpp  ServerConfItem.h  ServerConfManager.cpp  ServerConfManager.h  ServersSettingsFrame.cpp  ServersSettingsFrame.h  ServersSettingsPage.cpp  ServersSettingsPage.h  SystemTray.cpp  SystemTray.h  base64.h  defs.h  main.cpp  pac.h  utils.h
src/impl/: BaseClient.cpp  BaseClient.h  ShadowsocksClient.cpp  ShadowsocksClient.h  ShadowsocksConfItem.cpp  ShadowsocksConfItem.h  TrojanClient.cpp  TrojanClient.h  TrojanConfItem.cpp  TrojanConfItem.h
tools/darwin/: msgfmt
